--- a/character.html
+++ b/character.html
@@ -115,6 +115,8 @@
   	<span class="select"><img src="img/aset/Face Icon_02.png" alt="" class="C" width="45" height="45"></span>
   	<span><img src="img/aset/Face Icon_03.png" alt="" class="C" width="45" height="45"></span>
   	<span><img src="img/aset/Face Icon_04.png" alt="" class="C" width="45" height="45"></span>
+    <!--Face Icon_01.pngの01の部分を変更して、コメントアウトを外し、小出しにしていきます-->
+    <!--
   	<span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
@@ -122,7 +124,7 @@
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
-    <!--10-->
+    <!--10
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
@@ -133,7 +135,7 @@
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
-    <!--20-->
+    <!--20
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
@@ -144,7 +146,7 @@
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
-    <!--30-->
+    <!--30
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
     <span><img src="img/aset/Face Icon_01.png" alt="" class="C" width="45" height="45"></span>
@@ -289,7 +291,8 @@
       <strong>制約は『両手首の欠損』。</strong><br><br>
       武器を持つことは諦め、味方を守る力を特化させた。<br>
       能力の向上のため以外にも自戒の意味が込められており、<br>
-      日常生活でも生体デバイスや義手を使わずに過ごしている。</p></span>
+      日常生活でも生体デバイスや義手を使わずに過ごしている。</p>
+    </span>
     </div>
     <!--4-->
     <div class="hide">
@@ -1266,29 +1269,8 @@
 </div>
 -->
 
-<div class="contmoji">
-  <span><img src="img/news2.png" alt="" class="C"></span>
-</div>
-
 
 <div class="HQ">
-  <div class="Os">
-    <div class="Os2">
-
-      <p class="no1"><a href="#">お知らせ１</a></p>
-      <hr>
-      <p class="no1"><a href="#">お知らせ２</a></p>
-      <hr>
-      <p class="no1"><a href="#">お知らせ３</a></p>
-      <hr>
-      <p class="no1"><a href="#">お知らせ４</a></p>
-      <hr>
-
-      <p class="no1 no2"><a href="news.html">more ▶▶▶</a></p>
-
-
-    </div>
-  </div>
 
   <div class="contmoji2">
     <span><img src="img/twitter.png" alt="" class="C"></span>
@@ -1296,7 +1278,7 @@
 
   <div class="Tw">
     <div class="Tw2">
-      <a class="twitter-timeline" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
+      <a class="twitter-timeline" data-height="300" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
       Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </div>
