--- a/index.html
+++ b/index.html
@@ -126,14 +126,17 @@ jQuery.event.add(window,"load",function() { // 全ての読み込み完了後に
   <div class="Os">
     <div class="Os2">
 
-      <p class="no1"><a href="#">お知らせ１</a></p>
+      <p class="no1"><a href="#">2019/05/01<br>公式サイトを公開しました。</a></p>
       <hr>
-      <p class="no1"><a href="#">お知らせ２</a></p>
+      <!--
+      <p class="no1"><a href="#"></a></p>
       <hr>
-      <p class="no1"><a href="#">お知らせ３</a></p>
+      <p class="no1"><a href="#"></a></p>
       <hr>
-      <p class="no1"><a href="#">お知らせ４</a></p>
+      <p class="no1"><a href="#"></a></p>
       <hr>
+      -->
+
 
       <p class="no1 no2"><a href="news.html">more ▶▶▶</a></p>
 
@@ -147,8 +150,12 @@ jQuery.event.add(window,"load",function() { // 全ての読み込み完了後に
 
   <div class="Tw">
     <div class="Tw2">
+<a class="twitter-timeline" data-height="300" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">Tweets by RoktGames</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <!--
       <a class="twitter-timeline" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
-      Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
     </div>
 </div>
 </div>
