--- a/news.html
+++ b/news.html
@@ -119,7 +119,7 @@
       <span class="Os">
         <span class="Os2">
 
-          <p class="no1"><a href="#">お知らせ１（お知らせは1ページ９、クリック後は別ページに飛ばす）</a></p>
+          <p class="no1"><a href="#">2019/05/01<br>公式サイトを公開しました。</a></p>
           <hr><!--
           <p class="no1"><a href="#">[重要] iOS 一部機種における引き継ぎが正常に行えない問題について (2018/01/20)</a></p>
           <hr>
@@ -148,14 +148,14 @@
 
       <span class="Os">
         <span class="Os2">
-
+<!--
           <p class="no1"><a href="#">（増やしていく）[メンテナンス] 01/15 AM5:00~AM8:00までサーバー増築に伴うメンテナンスを実行します (2018/01/20)</a></p>
           <hr>
           <p class="no1"><a href="#">（増やしていく）[重要] iOS 一部機種における引き継ぎが正常に行えない問題について (2018/01/20)</a></p>
           <hr>
           <p class="no1"><a href="#">（増やしていく）[お知らせ] 今後実装予定の新システム「補給所」「探索」について (2018/01/20)</a></p>
           <hr>
-
+-->
         </span>
       </span>
 
@@ -164,11 +164,14 @@
   </div>
 
   <div class="boxB-3">
+    <!--
     <span class="select"><img src="img/left.png" alt="" class="C"></span>
     <!--
     <span><img src="img/center.png" alt="" class="Cbottan" width="4%" height="4%"></span>
   -->
+  <!--
     <span><img src="img/right.png" alt="" class="C"></span>
+  -->
     <!--10-->
   </div>
 </div>
@@ -204,7 +207,7 @@
 
   <div class="Tw">
     <div class="Tw2">
-      <a class="twitter-timeline" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
+      <a class="twitter-timeline" data-height="300" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
       Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </div>
