--- a/system.html
+++ b/system.html
@@ -115,6 +115,7 @@
   <div class="boxB-2">
     <!--最初の表示のみ-->
     <div class="">
+      <p style="text-align:center;">近日公開</p>
 
 
 
@@ -161,30 +162,9 @@
 </div>
 -->
 
-<div class="contmoji">
-  <span><img src="img/news2.png" alt="" class="C"></span>
-</div>
-
 
 <div class="HQ">
 
-  <div class="Os">
-    <div class="Os2">
-
-      <p class="no1"><a href="#">お知らせ１</a></p>
-      <hr>
-      <p class="no1"><a href="#">お知らせ２</a></p>
-      <hr>
-      <p class="no1"><a href="#">お知らせ３</a></p>
-      <hr>
-      <p class="no1"><a href="#">お知らせ４</a></p>
-      <hr>
-
-      <p class="no1 no2"><a href="news.html">more ▶▶▶</a></p>
-
-
-    </div>
-  </div>
 
   <div class="contmoji2">
     <span><img src="img/twitter.png" alt="" class="C"></span>
@@ -192,7 +172,7 @@
 
   <div class="Tw">
     <div class="Tw2">
-      <a class="twitter-timeline" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
+      <a class="twitter-timeline" data-height="300" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
       Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </div>
