--- a/special.html
+++ b/special.html
@@ -115,7 +115,7 @@
   <div class="boxB-2">
     <!--最初の表示のみ-->
     <div class="">
-
+      <p style="text-align:center;">近日公開</p>
 
 
     </div>
@@ -160,29 +160,10 @@
 </div>
 -->
 
-<div class="contmoji">
-  <span><img src="img/news2.png" alt="" class="C"></span>
-</div>
+
 
 <div class="HQ">
 
-    <div class="Os">
-      <div class="Os2">
-
-        <p class="no1"><a href="#">お知らせ１</a></p>
-        <hr>
-        <p class="no1"><a href="#">お知らせ２</a></p>
-        <hr>
-        <p class="no1"><a href="#">お知らせ３</a></p>
-        <hr>
-        <p class="no1"><a href="#">お知らせ４</a></p>
-        <hr>
-
-        <p class="no1 no2"><a href="news.html">more ▶▶▶</a></p>
-
-
-      </div>
-    </div>
 
     <div class="contmoji2">
       <span><img src="img/twitter.png" alt="" class="C"></span>
@@ -190,7 +171,7 @@
 
   <div class="Tw">
     <div class="Tw2">
-      <a class="twitter-timeline" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
+      <a class="twitter-timeline"data-height="300" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
       Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </div>
