--- a/world.html
+++ b/world.html
@@ -170,7 +170,7 @@
 
   <div class="Tw">
     <div class="Tw2">
-      <a class="twitter-timeline" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
+      <a class="twitter-timeline" data-height="300" href="https://twitter.com/RoktGames?ref_src=twsrc%5Etfw">
       Tweets by RoktGames</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </div>
